<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/add_contact"
        android:showAsAction="never"
        android:title="@string/add_contact"/>

    <item 
        android:id="@+id/action_login"
        android:showAsAction="never"
        android:title="@string/action_Login"/>
    
    <item 
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/action_Logout"/>
    <item android:id="@+id/action_delete_all" android:title="@string/action_delete_all" android:enabled="true" android:showAsAction="never"></item>

</menu>
